k8s/haproxy/haproxy-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-controller
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: ingress-default-backend
  name: ingress-default-backend
  namespace: ingress-controller
spec:
  selector:
    matchLabels:
      run: ingress-default-backend
  template:
    metadata:
      labels:
        run: ingress-default-backend
    spec:
      containers:
      - name: ingress-default-backend
        image: gcr.io/google_containers/defaultbackend:1.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-default-backend
  namespace: ingress-controller
spec:
  ports:
  - port: 8080
  selector:
    run: ingress-default-backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: ingress-controller
spec:
#  updateStrategy:
#    type: RollingUpdate
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      hostNetwork: true
#      nodeSelector:
#        role: ingress-controller
      serviceAccountName: ingress-controller
      containers:
      - name: haproxy-ingress
        image: quay.io/jcmoraisjr/haproxy-ingress:canary
        args:
        - --default-backend-service=$(POD_NAMESPACE)/ingress-default-backend
        - --configmap=$(POD_NAMESPACE)/haproxy-ingress
        - --sort-backends
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1936
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10253
        volumeMounts:
          - name: config-vol
            mountPath: /etc/haproxy/template/haproxy.tmpl
            subPath: haproxy.tmpl
          - name: config-json-lua
            mountPath: /etc/haproxy/json.lua
            subPath: json.lua
          - name: config-json-test-lua
            mountPath: /etc/haproxy/test.lua
            subPath: test.lua
      volumes:
        - name: config-vol
          configMap:
            name: haproxy-templates
        - name: config-json-lua
          configMap:
            name: haproxy-json-lua
        - name: config-json-test-lua
          configMap:
            name: haproxy-json-test-lua
