k8s/haproxy/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-haproxy
  namespace: ingress-controller
  labels:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-haproxy
    app.kubernetes.io/part-of: ingress-haproxy

---
