k8s/haproxy/ingress-haproxy.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-app-ingress
  annotations:
    ingress.kubernetes.io/config-backend: |
      stick-table type string len 36 size 1m expire 1m store http_req_rate(10s)
      stick on "lua.get_username"
spec:
  rules:
  - host: python-app.com
    http:
      paths:
      - path: /hit_backend
        backend:
          serviceName: python-app3
          servicePort: 8080
      - path: /hit_backend
        backend:
          serviceName: python-app2
          servicePort: 8080
      - path: /hit_backend
        backend:
          serviceName: python-app1
          servicePort: 8080
